--- a/Task 1 slider/src/index.css
+++ b/Task 1 slider/src/index.css
@@ -4,10 +4,10 @@
 
 
 .search-input {
-  width: 200px; /* set a fixed width */
-  max-width: 100%; /* set a max-width to prevent it from growing beyond the parent container */
+  width: 200px; 
+  max-width: 100%; 
 }
 
 .search-button {
-  width: 40px; /* set a fixed width for the button */
+  width: 40px; 
 }
